--- a/src/styles/Crypto.css
+++ b/src/styles/Crypto.css
@@ -2,7 +2,10 @@
 #crypto {
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
-    padding-top: 60px;
+    width: 94%;
+    margin-left: 0;
+    margin-left: 50px;
+    
 }
 
 img {
@@ -11,21 +14,18 @@ img {
 }
 
 #cryptoTable {
-    width: 800px;
+    width: 100%;
+    height: 500px;
+    float: left;
+    margin-bottom: 20px;
 }
 
-#cryptoTable td {
+/* #cryptoTable td {
     padding: 5px 5px;
     color: white;
     border: 2px solid black;
     background-color: #4b6876;
-}
-
-.main {
-    margin-left: 20px;
-    font-weight: 500;
-    font-size: 20px;
-}
+} */
 
 .dark {
     color: white;
