--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -2,11 +2,15 @@
 #darkMode {
     background-color: #262626;
     width: 100%;
+    min-height: 80px;
+    padding-top: 8px;
 }
 
 #lightMode {
     background-color: rgb(231, 234, 239);
     width: 100%;
+    min-height: 80px;
+    padding-top: 8px;
 }
 
 #title {
@@ -16,7 +20,7 @@
 }
 
 #dark {
-    margin-left: 30px;
+    margin-left: 35px;
     text-decoration: none;
     font-size: 20px;
     color: rgb(231, 234, 239);
@@ -25,7 +29,8 @@
 }
 
 #navLink {
-    margin-left: 30px;
+    margin-top: 10px;
+    margin-left: 35px;
     text-decoration: none;
     font-size: 20px;
     color: #262626;
