--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -9,30 +9,51 @@ body {
 #main {
     height: 100vh;
     width: 100vw;
+    background: #fafafa;
+    background: -webkit-linear-gradient(to top, rgb(254, 254, 254), rgb(249, 249, 250));  
+    background: linear-gradient(to top, rgb(254, 254, 254), rgb(249, 249, 250));
+    display: flex;
+    }
+    /* #fdfefe; */
+
+#homeT {
+    position: relative;
+    top: 160px;
+    left: 300px;
+    height: 300px;
+    margin: 0;
+    padding: 0;
     text-align: center;
-    background-size: cover;
-    background-image: url('https://uniim1.shutterfly.com/ng/services/mediarender/THISLIFE/024011495256/media/14976905162/medium/1581393692/enhance');
 }
 
+
 #name {
-    opacity: .6;
-    font-weight: 400;
-    font-size: 10em;
-    box-sizing: border-box;
-    margin-top: 0;
-    padding-top: 280px;
+    opacity: .7;
+    font-weight: 600;
+    font-size: 12em;
     padding: none;
+    font-family: 'Poppins', sans-serif;
+    color: black;
+}
+
+#sub {
+    font-size: 50px;
+    color: black;
+    position: relative;
+    bottom: 50px;
 }
 
 #butt {
     font-size: 50px;
-    margin: none;
-    padding: none;
-    opacity: .4;
+    opacity: .5;
     font-weight: 400;
     font-family: 'Poppins', sans-serif;
     text-transform: none;
     border-radius: 30px;
+    position: relative;
+    bottom: 30px;
+    color: black;
+    border: 2px solid rgba(0, 0, 0, .5);
 }
 
 #butt:hover {
@@ -41,5 +62,19 @@ body {
 }
 
 .home {
-    display: block;
+}
+
+#photo img {
+    width: 700px;
+    height: 580px;
+}
+
+#photo {
+    width: 700px;
+    height: 580px;
+    position: relative;
+    top: 140px;
+    left: 250px;
+    margin: 0;
+    padding: 0;
 }
